2012-02-22  Stefan Sauer  <ensonic@users.sf.net>

	* Arguru/Distortion/Distortion.cpp:
	* Arguru/Distortion/Makefile.am:
	* Arguru/GoaSlicer/goaslicer.cpp:
	* Arguru/GoaSlicer (added):
	* Arguru/GoaSlicer/goaslicer.cpp (added):
	* Arguru/README (added):
	* Arguru/Distortion/Makefile.am (added):
	* Arguru/Distortion/Distortion.hpp (deleted):
	* Arguru/README:
	  Add a Readme explaining the origin of the sources. Try a backport for
	  distortion.

	* Ld/Gate/gate.cpp:
	  Make it build. We can use that to get auxbus working.

	* HACKING:
	* configure.ac:
	  Updates for halfported machines.
	  

2012-02-22  Stefan Sauer  <ensonic@users.sf.net>

	* AsDev/a4pFilter01/AsDev_a4pFilter01.html:
	* AsDev/a4pFilter01/Makefile.am:
	* Elenzil/Modulator/Makefile.am:
	* FrequencyUnknown/Makefile.am:
	* FrequencyUnknown/O-Delay/Makefile.am:
	* HACKING:
	* Makefile.am:
	* configure.ac:
	* AsDev/a4pFilter01/AsDev_a4pFilter01.html (added):
	* FrequencyUnknown/Makefile.am (added):
	* FrequencyUnknown/O-Delay/FrequencyUnknown_O-Delay_sparkle.bmx (added):
	* FrequencyUnknown/O-Delay/Makefile.am (added):
	* FrequencyUnknown/O-Delay/FrequencyUnknown_O-Delay.html (added):
	* FrequencyUnknown/O-Delay/FrequencyUnknown_O-Delay_delaytest.bmx (added):
	* Elenzil/Modulator/Elenzil_Modulator.html (added):
	* FrequencyUnknown/O-Delay/delaytest.bmx (deleted):
	* FrequencyUnknown/O-Delay/sparkle.bmx (deleted):
	* FrequencyUnknown/O-Delay/O-Delay.html (deleted):
	* Elenzil/Modulator/amplitude_modulator.html (deleted):
	  Added more docs and fixed some doc file names. Ported
	  FrequencyUnknown/O-Delay.

2012-02-20  Stefan Sauer  <ensonic@users.sf.net>

	* FSM/Infector/FSM_Infector.html:
	* FSM/Infector/Makefile.am:
	* FSM/Infector/FSM_Infector.html (added):
	  Add docs for Infector.
	* HACKING:
	  Mention space issues in filenames.

2012-02-18  Stefan Sauer  <ensonic@users.sf.net>

	* Elenzil/Modulator/amplitude_modulator.cpp:
	* WhiteNoise/StereoDist/Dist.cpp:
	  Fix more compiler warnings.
