@@ -1,7 +1,7 @@
 ## $Id$
 
 SUBDIRS = common \
-  AsDev Chimp CyanPhase Elak Elenzil Ensonic FrequencyUnknown FSM Geonik \
+  AseDev Chimp CyanPhase Elak Elenzil Ensonic FrequencyUnknown FSM Geonik \
   Jeskola Ld MadBrain Makk Matilde Q WhiteNoise Zwar
 
 ACLOCAL_AMFLAGS = -I m4
